<resources>
    <string name="app_name">8086 Basics</string>
    <string name="addressing_text_view_1">The 8086 microprocessor accesses the data in different ways such as from different registers, from memory locations or from I/O ports are called its addressing modes. These addressing modes are categorized according to the accessing method. These are as follows.</string>
    <string name="addressing_text_view_10">The square bracket around the registers i.e. BX, BP are shorthand  for  “the  contents  of  that  registers  at  a displacement from the segment base of .</string>
    <string name="addressing_text_view_11">This  addressing  mode  is  called  direct  because  the displacement or offset of the operand from the segment base is specified directly in the instruction.</string>
    <string name="addressing_text_view_12">This addressing mode is a relation base. The data is stored either in base pointer (BP) or in BX.</string>
    <string name="addressing_text_view_13">In this addressing mode no operands are used to execute the instruction. </string>
    <string name="addressing_text_view_2">In register addressing mode, most 8086 instructions can operate the general purpose register to set as an operand to the instruction. This means a register is a source of an operand as well as the register is only the destination of an operand for an instruction. \nMOV destination, source;\nThis instruction copies the data from the source location to the destination location. The 8-bit or 16 bit registers are certainly valid operands for this instruction. But both operands should be in the same size. Now let&apos;s see some 8086 MOV instructions:</string>
    <string name="addressing_text_view_3">Copies the 16 bit value from BX into AX,\nHere the contents of AX is overlapping, but the contents of BX are not changed. (Both registers are in same size)</string>
    <string name="addressing_text_view_4">In immediate addressing mode, the hexadecimal number either  8­bit  or  16­bit  to  be  loaded  immediately  into  the memory  locations  or  consecutive  memory  locations respectively. i.e to load 8­bit immediate number into an 8­bit memory location or to load a 16­bit immediate number into two consecutive memory locations. Some examples of that instructions</string>
    <string name="addressing_text_view_5">copies  16­bit  hexadecimal  number 437BH in the 16­bit CX register</string>
    <string name="addressing_text_view_6">Load the 8­bit immediate number 48H into the 8­bit CL register</string>
    <string name="addressing_text_view_7">The  memory  addressing  modes  are  used  to  specify  the location  of  an  operand  as  memory.  To  access  data  in memory,  the  8086  should  be  produce  a  20­bit  physical address. It does this by adding a 16­bit value called the effective address (EA). The effective address represents the displacement  or  offset  of  the  desired  operand  from  the segment base. The data segment is most often used as a segment base.</string>
    <string name="addressing_text_view_8">ADD  the  contents  of  DS  (One  of  four segment bases) with BX and result will shift in AL register.</string>
    <string name="addressing_text_view_9">ADD  the  contents  of  DS  (One  of  four segment bases) with BP and result will shift in AL register.</string>
    <string name="admob_interstitial_id">ca-app-pub-4917467301205029/6521067790</string>
    <string name="architecture_text_view_1">Intel 8086 is a 16 bit integer processor. It has 16-bit data bus and 20-bit address bus. The lower 16-bit address lines and 16-bit data lines are multiplexed (AD0-AD15). Since 20-bit address lines are available, 8086 can access up to 2 20 or 1 Giga byte of physical memory.\nThe basic architecture of 8086 is shown below.</string>
    <string name="architecture_text_view_10">In the BIU, the next register, below the segment register is instruction pointer. The instruction pointer (IP) holds the 16-bit address of the next code byte within this code segment.</string>
    <string name="architecture_text_view_11">The execution unit (EU) tells the BIU where to fetch instructions or data from, decodes instructions, and executes instructions.\nThe functional parts of the execution unit are control circuitry or system, instruction decoder, and Arithmetic logic unit (ALU).\nControl circuitry to perform various internal operations. A decoder in the EU translates instructions fetched from memory to generate different internal or external control signals that required performing the operation. The EU has a 16-bit ALU, which can perform arithmetic operations such as add, subtract etc. and logical operations such as AND, OR, XOR, increment, decrement etc.</string>
    <string name="architecture_text_view_12">A 16-bit flag register is a flip-flop which indicates some condition produced by the execution of an instruction or controls certain operations of the EU. They are modified automatically by CPU after mathematical operations. It has 9 flags and they are divided into two categories:\n1. Conditional Flags\n2. Control Flags</string>
    <string name="architecture_text_view_13">Conditional flags represent result of last arithmetic or logical instructions.</string>
    <string name="architecture_text_view_14">This flag will be set to one if the arithmetic operation produces the carry in MSB position. It is also used in multiple-precision arithmetic.</string>
    <string name="architecture_text_view_15">If an operation performed in ALU generates a carry/barrow from lower nibble (i.e. D0 – D3) to upper nibble (i.e. D4 – D7), the AF flag is set i.e. carry given by D3 bit to D4 is AF flag. This is not a general-purpose flag; it is used internally by the processor to perform Binary to BCD conversion.</string>
    <string name="architecture_text_view_16">This flag is used to indicate the parity of result. If lower order 8-bits of the result contains even number of 1’s, the Parity Flag is set to one and for odd number of 1’s, the Parity Flag is reset i.e. zero.</string>
    <string name="architecture_text_view_17">It is set to one; if the result of arithmetic or logical operation is zero else it is reset.</string>
    <string name="architecture_text_view_18">In sign magnitude format the sign of number is indicated by MSB bit. If the result of operation is negative, sign flag is set to one.</string>
    <string name="architecture_text_view_19">It occurs when signed numbers are added or subtracted. An OF indicates that the result has exceeded the capacity of machine.</string>
    <string name="architecture_text_view_2">The internal architecture of Intel 8086 is divided into two units, viz., Bus Interface Unit (BIU) and Execution Unit (EU).</string>
    <string name="architecture_text_view_20">Control flags are intentionally set or reset to control certain operations of the processor with specific instructions put in the program from the user. Control flags are as follows:</string>
    <string name="architecture_text_view_21">It is used for single step control. It allows user to execute one instruction of a program at a time for debugging. When trap flag is set, program can be run in single step mode.</string>
    <string name="architecture_text_view_22">It is an interrupt enable/disable flag, i.e. used to allow/prohibit the interruption of a program. If it is set, the maskable interrupt is enabled and if it is reset, the interrupt is disabled.</string>
    <string name="architecture_text_view_23">It is used in string operation. If it is set, string bytes are accessed from higher memory address to lower memory address. When it is reset, the string bytes are accessed from lower memory address to higher memory address.</string>
    <string name="architecture_text_view_24">The EU has eight general purpose registers labeled AH, AL, BH, BL, CH, CL, DH, and DL. These registers can be used individually for temporary storage of 8-bit data. The AL register is also called the accumulator. Certain pairs of these general purpose registers can be used together to store 16-bit data. The valid register pairs are AH and AL, BH and BL, CH and CL and DH and DL. These register pairs is referred to the AX, BX, CX, and DX resp.</string>
    <string name="architecture_text_view_25">For 16-bit operations, AX is called the accumulator register that stores operands for arithmetic operations.</string>
    <string name="architecture_text_view_26">This register is mainly used as a base register. It holds the starting base location of a memory region within a data segment.</string>
    <string name="architecture_text_view_27">It is defined as a counter. It is primarily used in loop instruction to store loop counter.</string>
    <string name="architecture_text_view_28">DX register is used to contain I/O port address for I/O instruction.</string>
    <string name="architecture_text_view_29">The stack pointer (SP) register contains the 16-bit offset from the start of the segment to the memory location where a word was most recently stored on the stack. The memory location where a word was most recently stored is called the top of stack.\nOther Pointer and Index Registers\nThe EU also contains a 16-bit source index (SI) register, base pointer (BP) registers, and Destination Index (DI) registers. These three registers can be mainly used for temporary storage of 16-bit data just like a general purpose registers.</string>
    <string name="architecture_text_view_3">The BIU handles all data and addresses on the buses for the execution unit such as it sends out addresses, fetches instructions from memory, reads data from ports and memory as well as writes data to ports and memory. In BIU there are so many functional groups or parts these are as follows.</string>
    <string name="architecture_text_view_4">To increase the execution speed, BIU fetches as many as six instruction bytes ahead to time from memory. The pre fetched instruction bytes are held for the EU in a first in first out group of registers called a instruction queue. When the EU is ready for its next instruction, it simply reads the instruction from this instruction queue. This is much faster than sending out an address to the system memory and to send back the next instruction byte. Fetching the next instruction while the current instruction executes is called pipelining.</string>
    <string name="architecture_text_view_5">The BIU contains four 16-bit segment registers. They are: the extra segment (ES) register, the code segment (CS) registers, the data segment (DS) registers, and the stack segment (SS) registers. These segment registers are used to hold the upper 16 bits of the starting address for each of the segments. The part of a segment starting address stored in a segment register is often called the segment base.</string>
    <string name="architecture_text_view_6">The CS register is used for addressing a memory location in the Code Segment of the memory, where the executable program is stored.</string>
    <string name="architecture_text_view_7">The DS contains most data used by program. Data are accessed in the\nData Segment by an offset address or the content of other register that holds the offset address.</string>
    <string name="architecture_text_view_8">SS defined a section of memory to store addresses and data while a subprogram executes.</string>
    <string name="architecture_text_view_9">ES is additional data segment that is used by some of the string to hold the extra destination data.</string>
    <string name="assemblier_directive_defination">The ASSUME directive is used to tell the assembler that the name of the logical segment should be used for a specified segment. The 8086 works directly with only 4 physical segments: a Code segment, a data segment, a stack segment, and an extra segment.</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
</resources>